Apache aproach and initial map greed

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,14 +6,13 @@
         <meta name="description" content="World Tactics is a JavaScript game, made just for fun">
         <meta name="author" content="jpadilla">
         <meta name="theme-color" content="#000000" />
+        <link rel="stylesheet" href="styles.css">
     </head>
-    <body>
-        <h1>World Tactics</h1>
+    <body >
         <div id="wtGame"></div>
-        <div id="root" hidden></div>
-        <!-- script src="./components/main.js" />
-        <script src="./components/rectangle.js" />
-        <script src="./components/dimentions.js" />
-        <script src="./components/init.js" /> -->
+        <script src="./components/main.js"></script>
+        <script src="./components/dimention.js"></script>
+        <script src="./components/rectangle.js"></script>
+        <script src="./components/init.js"></script>
     </body>
 </html>
