--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,6 +13,7 @@
         <script src="./components/main.js"></script>
         <script src="./components/dimention.js"></script>
         <script src="./components/rectangle.js"></script>
+        <script src="./components/keyboard.js"></script>
         <script src="./components/init.js"></script>
     </body>
 </html>
