--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,6 +14,7 @@
         <script src="./components/dimention.js"></script>
         <script src="./components/rectangle.js"></script>
         <script src="./components/keyboard.js"></script>
+        <script src="./components/gamepad.js"></script>
         <script src="./components/init.js"></script>
     </body>
 </html>
