--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,6 +11,7 @@
     <body >
         <div id="wtGame"></div>
         <script src="./components/main.js"></script>
+        <script src="./components/ajax.js"></script>
         <script src="./components/dimention.js"></script>
         <script src="./components/rectangle.js"></script>
         <script src="./components/keyboard.js"></script>
