just a little better
background random and best map controller
a lot to do next

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,10 +10,11 @@
     </head>
     <body >
         <div id="wtGame"></div>
+        <script src="./components/Dimention.js"></script>
+        <script src="./src/map/mapController.js"></script>
         <script src="./components/main.js"></script>
         <script src="./components/ajax.js"></script>
-        <script src="./components/dimention.js"></script>
-        <script src="./components/rectangle.js"></script>
+        <script src="./components/Tile.js"></script>
         <script src="./components/keyboard.js"></script>
         <script src="./components/gamepad.js"></script>
         <script src="./components/init.js"></script>
