tiles y map loader

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,6 +11,7 @@
     <body >
         <div id="wtGame"></div>
         <script src="./components/Dimention.js"></script>
+        <script src="./src/gameController.js"></script>
         <script src="./src/map/mapController.js"></script>
         <script src="./components/main.js"></script>
         <script src="./components/ajax.js"></script>
