mountains and first part of begining of turn

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -18,6 +18,7 @@
         <script src="./components/Tile.js"></script>
         <script src="./components/keyboard.js"></script>
         <script src="./components/gamepad.js"></script>
+        <script src="./components/splash.js"></script>
         <script src="./components/init.js"></script>
     </body>
 </html>
