redraw units when  resize
And Icon

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>World Tactics - js game</title>
+        <link rel="icon" type="image/x-icon" href="./img/wtico.ico">
         <meta name="description" content="World Tactics is a JavaScript game, made just for fun">
         <meta name="author" content="jpadilla">
         <meta name="theme-color" content="#000000" />
