begining of stage 5

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,6 +14,7 @@
         <script src="./components/Dimention.js"></script>
         <script src="./src/gameController.js"></script>
         <script src="./src/map/mapController.js"></script>
+        <script src="./src/state5Controller.js"></script>
         <script src="./components/main.js"></script>
         <script src="./components/ajax.js"></script>
         <script src="./components/Tile.js"></script>
