--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,6 +15,7 @@
         <script src="./src/gameController.js"></script>
         <script src="./src/map/mapController.js"></script>
         <script src="./src/state5Controller.js"></script>
+        <script src="./src/state6Controller.js"></script>
         <script src="./components/main.js"></script>
         <script src="./components/ajax.js"></script>
         <script src="./components/Tile.js"></script>
