balance and bugs
only skills left

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,6 +14,8 @@
         <script src="./components/Dimention.js"></script>
         <script src="./src/gameController.js"></script>
         <script src="./src/map/mapController.js"></script>
+        <script src="./src/state3Controller.js"></script>
+        <script src="./src/state4Controller.js"></script>
         <script src="./src/state5Controller.js"></script>
         <script src="./src/state6Controller.js"></script>
         <script src="./components/main.js"></script>
