bugs, new maps more players, balance
Beta playable, there are a lot of more things to do

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,6 +24,7 @@
         <script src="./components/keyboard.js"></script>
         <script src="./components/gamepad.js"></script>
         <script src="./components/splash.js"></script>
+        <script src="./components/get.js"></script>
         <script src="./components/init.js"></script>
     </body>
 </html>
