QA and constant management

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,6 +11,7 @@
     </head>
     <body >
         <div id="wtGame"></div>
+        <script src="./src/constants.js"></script>
         <script src="./components/Dimention.js"></script>
         <script src="./src/gameController.js"></script>
         <script src="./src/map/mapController.js"></script>
