--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,7 +12,7 @@
     <body >
         <div id="wtGame"></div>
         <script src="./src/constants.js"></script>
-        <script src="./components/Dimension.js"></script>
+        <script src="components/scrDimension.js"></script>
         <script src="./src/gameController.js"></script>
         <script src="./src/map/mapController.js"></script>
         <script src="./src/state3Controller.js"></script>
