--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,7 +11,7 @@
     </head>
     <body >
         <div id="wtGame"></div>
-        <script src="./src/constants.js"></script>
+        <script src="src/constants.js"></script>
         <script src="components/scrDimension.js"></script>
         <script src="./src/gameController.js"></script>
         <script src="./src/map/mapController.js"></script>
